--- a/index.html
+++ b/index.html
@@ -6,50 +6,52 @@
   <title>GRATIS SALDO 25.000 — Klaim Sekarang</title>
   <meta name="description" content="Klaim GRATIS SALDO 25.000 — untuk 500 orang tercepat. Tanpa depo, bisa WD. Kuota terbatas!" />
   <style>
-    :root{--bg:#0f1724;--card:#0b1220;--accent:#06b6d4;--muted:#94a3b8;--glass:rgba(255,255,255,0.04)}
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial; margin:0; background:linear-gradient(180deg,#071023 0%, #051423 100%); color:#e6eef6; -webkit-font-smoothing:antialiased; display:flex; align-items:center; justify-content:center; padding:24px}
-    .container{max-width:980px;width:100%;display:grid;grid-template-columns:1fr 420px;gap:28px}
-    @media (max-width:900px){.container{grid-template-columns:1fr;}}
-    .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:14px;padding:28px;box-shadow:0 10px 30px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.03)}
-    .hero h1{margin:0;font-size:28px;line-height:1.05}
-    .hero p{margin:10px 0 18px;color:var(--muted)}
-    .badges{display:flex;gap:8px;flex-wrap:wrap}
-    .badge{background:var(--glass);padding:8px 12px;border-radius:999px;font-weight:600;font-size:13px;color:#cfeff6}
-    .list{margin-top:14px}
-    .list li{margin:10px 0;display:flex;gap:12px;align-items:flex-start}
-    .dot{min-width:20px;height:20px;border-radius:6px;display:inline-grid;place-items:center;background:linear-gradient(180deg,var(--accent),#0891b2);font-weight:700}
-    .cta-wrap{display:flex;gap:12px;flex-wrap:wrap;margin-top:18px}
-    .btn{appearance:none;border:0;padding:12px 16px;border-radius:10px;font-weight:700;cursor:pointer}
+    :root{--bg:#0f1724;--card:#0b1220;--accent:#06b6d4;--muted:#94a3b8;--glass:rgba(255,255,255,0.04);--danger:#ef4444;--vip:#facc15}
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%;}
+    body{font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial; background:linear-gradient(180deg,#071023 0%, #051423 100%); color:#e6eef6; -webkit-font-smoothing:antialiased; display:flex; justify-content:center; padding:12px}
+    .container{max-width:640px;width:100%;display:flex;flex-direction:column;gap:20px}
+    .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:14px;padding:20px;box-shadow:0 8px 20px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.05)}
+    .hero{text-align:center}
+    .highlight-title{font-size:22px;font-weight:900;color:#06b6d4;line-height:1.3;margin-bottom:14px}
+    .hero img{max-width:100%;height:auto;border-radius:10px;margin:10px 0}
+    .hero p{margin:10px 0 16px;color:var(--muted);font-size:15px}
+    .badges{display:flex;gap:6px;flex-wrap:wrap;justify-content:center}
+    .badge{background:var(--glass);padding:6px 10px;border-radius:999px;font-weight:600;font-size:12px;color:#cfeff6}
+    .list{margin:14px 0;text-align:left}
+    .list li{margin:8px 0;display:flex;gap:10px;align-items:flex-start;font-size:14px}
+    .dot{min-width:18px;height:18px;border-radius:6px;display:inline-grid;place-items:center;background:linear-gradient(180deg,var(--accent),#0891b2);font-weight:700;font-size:12px}
+    .cta-wrap{display:flex;gap:10px;flex-wrap:wrap;justify-content:center;margin-top:14px}
+    .btn{appearance:none;border:0;padding:10px 14px;border-radius:10px;font-weight:700;cursor:pointer;font-size:14px}
     .btn-primary{background:linear-gradient(90deg,var(--accent),#0891b2);color:#042027}
     .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted)}
-    .side{display:flex;flex-direction:column;gap:16px}
-    .card.small{padding:18px}
-    .count{font-size:42px;font-weight:800;color:var(--accent)}
-    .small-muted{color:var(--muted);font-size:13px}
-    .link-box{background:rgba(255,255,255,0.02);padding:12px;border-radius:10px;display:flex;gap:8px;align-items:center}
-    .link-input{flex:1;border:0;background:transparent;color:#cdecef;outline:none;font-weight:600}
-    .footer{margin-top:14px;color:var(--muted);font-size:13px}
-    .pulse{animation:pulse 1.6s infinite}
-    @keyframes pulse{0%{transform:scale(1)}50%{transform:scale(1.02)}100%{transform:scale(1)}}
-    .note{background:linear-gradient(90deg, rgba(6,182,212,0.06), rgba(8,145,178,0.03));border-left:4px solid var(--accent);padding:12px;border-radius:8px;color:#bfeff6}
-    .section-title{font-size:20px;font-weight:700;margin-top:22px;margin-bottom:12px;color:#e6eef6}
-    .img-box{width:100%;overflow:hidden;border-radius:12px;box-shadow:0 4px 14px rgba(0,0,0,0.4);margin-top:12px}
-    .img-box img{width:100%;display:block}
-    .disabled{opacity:0.5;cursor:not-allowed}
+    .btn-vip{background:linear-gradient(90deg,var(--vip),#f59e0b);color:#1a1200;box-shadow:0 0 10px rgba(250,204,21,0.5)}
+    .footer{margin-top:12px;color:var(--muted);font-size:12px;text-align:center}
+    .note{background:linear-gradient(90deg, rgba(6,182,212,0.06), rgba(8,145,178,0.03));border-left:4px solid var(--accent);padding:10px;border-radius:8px;color:#bfeff6;font-size:13px;margin-top:14px}
+    .testimoni-section{margin-top:18px}
+    .testimoni-section h2{text-align:center;font-size:18px;margin-bottom:10px;color:#e6eef6}
+    .testimoni-box{height:160px;overflow:hidden;position:relative}
+    .testimoni-list{display:flex;flex-direction:column;gap:8px;position:absolute;animation:scrollUp 15s linear infinite}
+    .testimoni-item{background:rgba(255,255,255,0.04);padding:8px 10px;border-radius:8px;font-size:13px;color:#dceff7}
+    @keyframes scrollUp{0%{top:100%}100%{top:-100%}}
+    .counter-box{text-align:center;margin-top:12px;font-size:14px;color:#a9f6ff}
+    .counter-number{font-size:20px;font-weight:800;color:#06b6d4;margin-top:4px}
+    .warning{margin-top:8px;font-size:14px;font-weight:700;color:var(--danger);display:none}
+    @media(min-width:700px){.highlight-title{font-size:28px}.btn{font-size:15px}}
   </style>
 </head>
 <body>
   <main class="container">
     <section class="card hero">
+      <div class="highlight-title">💰 Kesempatan Emas!<br/>Daftar Sekarang & Dapatkan Bonus GRATIS Rp25.000 🚀</div>
+      <img src="IMG_20250922_142515.jpg" alt="Promo Bonus">
+
       <div class="badges">
         <div class="badge">✅ GRATIS SALDO 25.000</div>
         <div class="badge">💯 100% asli</div>
         <div class="badge">⏱️ 500 orang tercepat</div>
       </div>
 
-      <h1 style="margin-top:18px">Klaim Bonus Member Baru — <span style="color:var(--accent)">Gratis Rp25.000</span></h1>
       <p>Daftar tercepat untuk 500 orang. Tanpa depo, bisa WD — banyak yang sudah cair. Kuota terbatas!</p>
 
       <ul class="list">
@@ -63,105 +65,82 @@
         <button class="btn btn-ghost disabled" id="claimBtn" disabled>👉 Klaim Sekarang</button>
       </div>
 
-      <div class="footer">
-        NB: Kuota terbatas — klaim sebelum kuota habis!
+      <div class="cta-wrap">
+        <button class="btn btn-vip" id="vipBtn">👑 Daftar VIP Member</button>
       </div>
 
-      <div style="margin-top:14px" class="note">
-        Perhatian: Pastikan membaca syarat & ketentuan pada tautan klaim. Kami tidak menyimpan data Anda.
+      <div class="counter-box">
+        <div>Sudah klaim:</div>
+        <div class="counter-number" id="claimedCount">0 orang</div>
+        <div class="warning" id="warningMsg">⚠️ Kuota hampir habis! Segera klaim sekarang!</div>
       </div>
 
-      <div class="section-title">📢 Promo</div>
-      <div class="img-box"><img src="IMG_20250922_142515.jpg" alt="Promo Gratis 25.000" /></div>
-
-      <div class="section-title">💬 Testimoni</div>
-      <div class="img-box"><img src="1758532589516.jpg" alt="Bukti Cair Testimoni" /></div>
+      <div class="footer">NB: Kuota terbatas — klaim sebelum kuota habis!</div>
+      <div class="note">Perhatian: Pastikan membaca syarat & ketentuan pada tautan klaim. Kami tidak menyimpan data Anda.</div>
     </section>
 
-    <aside class="side">
-      <div class="card small">
-        <div style="display:flex;justify-content:space-between;align-items:center">
-          <div>
-            <div class="small-muted">Klaim tersisa</div>
-            <div class="count pulse" id="remaining">500</div>
-          </div>
-          <div style="text-align:right">
-            <div class="small-muted">Status</div>
-            <div style="font-weight:700;color:#8ef0ff">Aktif</div>
-          </div>
+    <section class="card testimoni-section">
+      <h2>💬 Testimoni Member</h2>
+      <div class="testimoni-box">
+        <div class="testimoni-list">
+          <div class="testimoni-item"><strong>Budi:</strong> Mantap! Saldo langsung masuk, bisa WD ke DANA ✅</div>
+          <div class="testimoni-item"><strong>Sinta:</strong> Awalnya ragu, ternyata beneran cair Rp25.000 🙏</div>
+          <div class="testimoni-item"><strong>Rizky:</strong> Gak pake ribet, daftar langsung dapat bonus 💯</div>
+          <div class="testimoni-item"><strong>Dewi:</strong> Terima kasih, sudah masuk ke OVO saya 😍</div>
+          <div class="testimoni-item"><strong>Andi:</strong> Real tanpa deposit, recommended! 👍</div>
+          <div class="testimoni-item"><strong>Fitri:</strong> Baru daftar langsung saldo masuk, keren banget!</div>
+          <div class="testimoni-item"><strong>Rian:</strong> Klaim mudah, kuota cepat habis guys buruan 😱</div>
         </div>
       </div>
-
-      <div class="card small">
-        <div class="small-muted">Tautan klaim</div>
-        <div style="height:8px"></div>
-        <div class="link-box">
-          <input class="link-input" id="claimLink" value="https://jali.me/bonusmemberbaru" readonly />
-          <button class="btn btn-primary" id="openBtn" disabled>Buka</button>
-        </div>
-        <div style="margin-top:10px" class="small-muted">Klik "Klaim" setelah daftar untuk menuju halaman klaim.</div>
-      </div>
-
-      <div class="card small">
-        <div class="small-muted">Cara pakai</div>
-        <ol style="margin:10px 0 0;color:var(--muted);padding-left:18px">
-          <li>Tekan tombol "Daftar Dulu".</li>
-          <li>Setelah daftar, tombol klaim aktif.</li>
-          <li>Jika ingin berbagi, salin tautan.</li>
-          <li>Pastikan kuota masih tersedia sebelum membagikan secara luas.</li>
-        </ol>
-      </div>
-    </aside>
+    </section>
   </main>
 
   <script>
     const link = 'https://jali.me/bonusmemberbaru';
     const registerBtn = document.getElementById('registerBtn');
     const claimBtn = document.getElementById('claimBtn');
-    const copyBtn = document.getElementById('copyBtn');
-    const openBtn = document.getElementById('openBtn');
-    const input = document.getElementById('claimLink');
-    const remaining = document.getElementById('remaining');
+    const vipBtn = document.getElementById('vipBtn');
+    const claimedCount = document.getElementById('claimedCount');
+    const warningMsg = document.getElementById('warningMsg');
+
+    let count = 0;
 
     registerBtn.addEventListener('click', ()=>{
       alert('Anda berhasil daftar! Tombol Klaim sekarang aktif.');
       claimBtn.classList.remove('disabled');
       claimBtn.removeAttribute('disabled');
-      openBtn.removeAttribute('disabled');
       claimBtn.classList.add('btn-primary');
     });
 
     claimBtn.addEventListener('click', ()=>{
       if(!claimBtn.disabled){
         window.open(link, '_blank');
+        count += 1;
+        updateCount();
       }
     });
 
-    if(copyBtn){
-      copyBtn.addEventListener('click', async ()=>{
-        try{
-          await navigator.clipboard.writeText(link);
-          copyBtn.textContent = '✅ Disalin';
-          setTimeout(()=> copyBtn.textContent = '🔗 Salin Link',1500);
-        }catch(e){
-          input.select(); document.execCommand('copy'); copyBtn.textContent = '✅ Disalin'; setTimeout(()=> copyBtn.textContent = '🔗 Salin Link',1500);
-        }
-      });
+    vipBtn.addEventListener('click', ()=>{
+      window.open(link, '_blank');
+      count += 1;
+      updateCount();
+    });
+
+    function updateCount(){
+      if(count > 500) count = 500;
+      claimedCount.textContent = count + ' orang';
+      if(count >= 450){
+        warningMsg.style.display = 'block';
+      }
     }
 
-    if(openBtn){
-      openBtn.addEventListener('click', ()=>{
-        if(!openBtn.disabled){
-          window.open(link, '_blank');
-        }
-      });
-    }
-
-    // Simulasi pengurangan kuota (client-side only, untuk demo)
-    let count = 500;
+    // Simulasi klaim otomatis agar terlihat real-time
     setInterval(()=>{
-      if(count>120){count -= Math.floor(Math.random()*2); remaining.textContent = count}
-    },4000);
+      if(count < 500){
+        count += Math.floor(Math.random()*3);
+        updateCount();
+      }
+    }, 4000);
   </script>
 </body>
 </html>
