--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>GRATIS SALDO 25.000 — Klaim Sekarang</title>
   <style>
-    :root{--bg:#0f1724;--card:#0b1220;--accent:#06b6d4;--muted:#94a3b8;--glass:rgba(255,255,255,0.04);--danger:#ef4444;--vip:#facc15;--warning:#fbbf24}
+    :root{--bg:#0f1724;--card:#0b1220;--accent:#06b6d4;--muted:#94a3b8;--glass:rgba(255,255,255,0.04);--danger:#ef4444;--vip:#facc15;--warning:#fbbf24;--claim1:#22c55e;--claim2:#16a34a}
     body{font-family:Inter,ui-sans-serif; background:#071023; color:#e6eef6; margin:0; padding:12px; display:flex; justify-content:center}
     .container{max-width:640px;width:100%;display:flex;flex-direction:column;gap:20px}
     .card{background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));border-radius:14px;padding:20px;box-shadow:0 8px 20px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.05)}
@@ -18,10 +18,11 @@
     .list li{margin:8px 0;display:flex;gap:10px;align-items:flex-start;font-size:14px}
     .dot{min-width:18px;height:18px;border-radius:6px;display:grid;place-items:center;background:linear-gradient(180deg,var(--accent),#0891b2);font-weight:700;font-size:12px}
     .cta-wrap{display:flex;gap:10px;flex-wrap:wrap;justify-content:center;margin-top:14px}
-    .btn{border:0;padding:10px 14px;border-radius:10px;font-weight:700;cursor:pointer;font-size:14px;transition:.3s}
+    .btn{border:0;padding:10px 14px;border-radius:10px;font-weight:700;cursor:pointer;font-size:14px;transition:.3s;text-decoration:none;display:inline-block}
     .btn:hover{transform:scale(1.05)}
     .btn-primary{background:linear-gradient(90deg,var(--accent),#0891b2);color:#042027}
-    .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted)}
+    .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:#cfeff6}
+    .btn-claim{background:linear-gradient(90deg,var(--claim1),var(--claim2));color:#fff;font-weight:900;box-shadow:0 0 10px rgba(34,197,94,0.6)}
     .btn-vip{background:linear-gradient(90deg,var(--vip),#f59e0b);color:#1a1200;box-shadow:0 0 10px rgba(250,204,21,0.6);animation:glow 1.5s infinite alternate}
     @keyframes glow{from{box-shadow:0 0 5px rgba(250,204,21,0.5)}to{box-shadow:0 0 20px rgba(250,204,21,1)}}
     .counter-box{text-align:center;margin-top:12px;font-size:14px;color:#a9f6ff}
@@ -37,6 +38,7 @@
     .important-note{background:rgba(251,191,36,0.15);border-left:4px solid var(--warning);padding:12px;border-radius:10px;color:#fff4ce;font-size:14px;margin-top:16px;display:flex;gap:8px;align-items:flex-start}
     .popup{position:fixed;bottom:20px;left:20px;background:rgba(15,23,36,0.95);color:#fff;padding:10px 14px;border-radius:10px;box-shadow:0 4px 12px rgba(0,0,0,0.5);opacity:0;transform:translateY(30px);transition:all .5s ease;z-index:9999;font-size:14px}
     .popup.show{opacity:1;transform:translateY(0)}
+    .icon{font-size:16px;margin-right:4px}
   </style>
 </head>
 <body>
@@ -51,15 +53,16 @@
       </div>
       <ul class="list">
         <li><div class="dot">1</div><div><strong>Tanpa depo</strong></div></li>
-        <li><div class="dot">2</div><div><strong>Bisa WD</strong> — Pengguna bisa menarik tanpa harus bermain & isi saldo.</div></li>
-        <li><div class="dot">3</div><div><strong>Kuota terbatas</strong> — Hanya untuk 500 klaim tercepat.</div></li>
+        <li><div class="dot">2</div><div><span class="icon">🏦💳</span><strong>Bisa klaim ke semua bank & e-wallet</strong> — pastikan penulisan data bank dan nama benar.</div></li>
+        <li><div class="dot">3</div><div><strong>Bisa WD</strong> — Pengguna bisa menarik tanpa harus bermain & isi saldo.</div></li>
+        <li><div class="dot">4</div><div><strong>Kuota terbatas</strong> — Hanya untuk 500 klaim tercepat.</div></li>
       </ul>
       <div class="cta-wrap">
-        <button class="btn btn-primary" id="registerBtn">📝 Daftar Dulu</button>
-        <button class="btn btn-ghost" id="claimBtn" disabled>👉 Klaim Sekarang</button>
+        <a href="https://f2.gtatogel.io/register?referral_code=aliong888" target="_blank" class="btn btn-primary">📝 Daftar Dulu</a>
+        <a href="https://f2.gtatogel.io/register?referral_code=aliong888" target="_blank" class="btn btn-claim">👉 Klaim Sekarang</a>
       </div>
       <div class="cta-wrap">
-        <button class="btn btn-vip" id="vipBtn">👑 Daftar VIP Member</button>
+        <a href="https://f2.gtatogel.io/register?referral_code=aliong888" target="_blank" class="btn btn-vip">👑 Daftar VIP Member</a>
       </div>
       <div class="counter-box">
         <div>Sisa kuota:</div>
@@ -82,14 +85,9 @@
   </main>
 
   <div class="popup" id="popup"></div>
-
   <audio id="tingSound" src="https://assets.mixkit.co/sfx/preview/mixkit-bell-notification-933.mp3" preload="auto"></audio>
 
   <script>
-    const link = 'https://f2.gtatogel.io/register?referral_code=aliong888';
-    const registerBtn = document.getElementById('registerBtn');
-    const claimBtn = document.getElementById('claimBtn');
-    const vipBtn = document.getElementById('vipBtn');
     const claimedCount = document.getElementById('claimedCount');
     const warningMsg = document.getElementById('warningMsg');
     const progressBar = document.getElementById('progressBar');
@@ -137,8 +135,6 @@
         warningMsg.style.display = 'block';
       } else if (remaining === 0) {
         warningMsg.textContent = '❌ Kuota sudah habis!';
-        claimBtn.disabled = true;
-        vipBtn.disabled = true;
       }
     }
 
@@ -157,26 +153,6 @@
       }
     }
 
-    registerBtn.addEventListener('click', ()=>{
-      alert('Anda berhasil daftar! Tombol Klaim aktif.');
-      claimBtn.disabled = false;
-      claimBtn.classList.add('btn-primary');
-    });
-
-    claimBtn.addEventListener('click', ()=>{
-      if(!claimBtn.disabled && remaining > 0){
-        window.open(link,'_blank');
-        doClaim();
-      }
-    });
-
-    vipBtn.addEventListener('click', ()=>{
-      if(remaining > 0){
-        window.open(link,'_blank');
-        doClaim();
-      }
-    });
-
     // Simulasi klaim otomatis
     setInterval(()=>{
       if(remaining > 0) doClaim();
@@ -191,7 +167,7 @@
       const color = colors[Math.floor(Math.random()*colors.length)];
       const item = document.createElement('div');
       item.className='testimoni-item';
-      item.innerHTML = `<div class="avatar" style="background:${color}">${t.name[0]}</div><div><strong>${t.name}:</strong> ${t.text}</div>`;
+      item.innerHTML = `<div class=\"avatar\" style=\"background:${color}\">${t.name[0]}</div><div><strong>${t.name}:</strong> ${t.text}</div>`;
       testimoniList.appendChild(item);
     });
 
