--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="badges">
         <div class="badge">✅ GRATIS SALDO 25.000</div>
         <div class="badge">💯 100% asli</div>
-        <div class="badge">⏱️ 500 orang tercepat</div>
+        <div class="badge">⏱️ 1500 orang tercepat</div>
       </div>
       <ul class="list">
         <li><div class="dot">1</div><div><strong>Tanpa depo</strong></div></li>
@@ -80,7 +80,7 @@
     </section>
 
     <section class="important-note">
-      ⚠️ <div>Saldo akan masuk jika data valid, tidak ada kesamaan IP, hanya bisa klaim <strong>1x per orang</strong>.</div>
+      ⚠️ <div>Saldo akan masuk setiap hari Senin Jam 13:00 WIB.pastikan data valid, tidak ada kesamaan IP, hanya bisa klaim <strong>1x per orang</strong>.</div>
     </section>
   </main>
 
@@ -121,7 +121,7 @@
     ];
 
     function showPopup(name){
-      popup.textContent = `🎉 ${name} baru klaim Rp25.000`;
+      popup.textContent = `🎉 ${name} Berhasil klaim Rp25.000`;
       popup.classList.add('show');
       setTimeout(()=> popup.classList.remove('show'), 4000);
     }
