--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>GRATIS SALDO 25.000 — Klaim Sekarang</title>
+  <title> GRATIS SALDO 25.000 YOWESJP — Klaim Sekarang</title>
   <style>
     :root{--bg:#0f1724;--card:#0b1220;--accent:#06b6d4;--muted:#94a3b8;--glass:rgba(255,255,255,0.04);--danger:#ef4444;--vip:#facc15;--warning:#fbbf24;--claim1:#22c55e;--claim2:#16a34a}
     body{font-family:Inter,ui-sans-serif; background:#071023; color:#e6eef6; margin:0; padding:12px; display:flex; justify-content:center}
@@ -44,7 +44,7 @@
 <body>
   <main class="container">
     <section class="card hero">
-      <div class="highlight-title">💰 Kesempatan Emas! Daftar & Dapatkan Bonus GRATIS Rp25.000 🚀</div>
+      <div class="highlight-title">💰 SPESIAL LAUNCHING YOWESJP! Daftar & Dapatkan Bonus GRATIS Rp25.000 🚀</div>
       <img src="IMG_20250922_142515.jpg" alt="Promo Bonus">
       <div class="badges">
         <div class="badge">✅ GRATIS SALDO 25.000</div>
@@ -55,18 +55,18 @@
         <li><div class="dot">1</div><div><strong>Tanpa depo</strong></div></li>
         <li><div class="dot">2</div><div><span class="icon">🏦💳</span><strong>Bisa klaim ke semua bank & e-wallet</strong> — pastikan penulisan data bank dan nama benar.</div></li>
         <li><div class="dot">3</div><div><strong>Bisa WD</strong> — Pengguna bisa menarik tanpa harus bermain & isi saldo.</div></li>
-        <li><div class="dot">4</div><div><strong>Kuota terbatas</strong> — Hanya untuk 500 klaim tercepat.</div></li>
+        <li><div class="dot">4</div><div><strong>Kuota terbatas</strong> — Hanya untuk 1500 Orang, klaim tercepat.</div></li>
       </ul>
       <div class="cta-wrap">
-        <a href="https://f2.gtatogel.io/register?referral_code=aliong888" target="_blank" class="btn btn-primary">📝 Daftar Dulu</a>
-        <a href="https://f2.gtatogel.io/register?referral_code=aliong888" target="_blank" class="btn btn-claim">👉 Klaim Sekarang</a>
+        <a href="https://yowesjp.com/register?referral=yowesvip" target="_blank" class="btn btn-primary">📝 Daftar ID VIP </a>
+        <a href="https://yowesjp.com/register?referral=yowesvip" target="_blank" class="btn btn-claim">👉 Klaim Bonus new member </a>
       </div>
       <div class="cta-wrap">
-        <a href="https://f2.gtatogel.io/register?referral_code=aliong888" target="_blank" class="btn btn-vip">👑 Daftar VIP Member</a>
+        <a href="https://yowesjp.com/register?referral=yowesvip" target="_blank" class="btn btn-vip">👑 Bonus VIP Member</a>
       </div>
       <div class="counter-box">
         <div>Sisa kuota:</div>
-        <div class="counter-number" id="claimedCount">457 orang</div>
+        <div class="counter-number" id="claimedCount"> 677 orang</div>
         <div class="progress-wrap"><div class="progress-bar" id="progressBar"></div></div>
         <div class="warning" id="warningMsg">⚠️ Kuota hampir habis!</div>
       </div>
@@ -80,7 +80,7 @@
     </section>
 
     <section class="important-note">
-      ⚠️ <div>Saldo akan masuk setiap hari Senin Jam 13:00 WIB.pastikan data valid, tidak ada kesamaan IP, hanya bisa klaim <strong>1x per orang</strong>.</div>
+      ⚠️ <div>Saldo akan masuk 1 oktober 2025,paling lambat Jam 13:00 WIB.pastikan data valid, tidak ada kesamaan IP, hanya bisa klaim <strong>1x per orang</strong>.</div>
     </section>
   </main>
 
