--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         <li><div class="dot">4</div><div><strong>Kuota terbatas</strong> — Hanya untuk 1500 Orang, klaim tercepat.</div></li>
       </ul>
       <div class="cta-wrap">
-        <a href="https://yowesjp.com/register?referral=yowesvip" target="_blank" class="btn btn-primary">📝 Daftar ID VIP </a>
-        <a href="https://yowesjp.com/register?referral=yowesvip" target="_blank" class="btn btn-claim">👉 Klaim Bonus new member </a>
+        <a href="https://yowesjp.com/register?referral=yowesvip" target="_blank" class="btn btn-primary">📝 Klaim Bonus New Member </a>
+        <a href="https://yowesjp.com/register?referral=yowesvip" target="_blank" class="btn btn-claim">👉 Klaim Bonus 25000 </a>
       </div>
       <div class="cta-wrap">
-        <a href="https://yowesjp.com/register?referral=yowesvip" target="_blank" class="btn btn-vip">👑 Bonus VIP Member</a>
+        <a href="https://yowesjp.com/register?referral=yowesvip" target="_blank" class="btn btn-vip">👑 DAFTAR Akun VIP Member Gratis </a>
       </div>
       <div class="counter-box">
         <div>Sisa kuota:</div>
