--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <main class="container">
     <section class="card hero">
       <div class="highlight-title">💰 SPESIAL LAUNCHING YOWESJP! Daftar & Dapatkan Bonus GRATIS Rp25.000 🚀</div>
-      <img src="IMG_20250922_142515.jpg" alt="Promo Bonus">
+      <img src="1758851838087.jpg" alt="Promo Bonus">
       <div class="badges">
         <div class="badge">✅ GRATIS SALDO 25.000</div>
         <div class="badge">💯 100% asli</div>
